# Barista

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  bindgen.sh  build.rs  rust-toolchain.toml
.cargo/: config
.github/workflows/: build.yml
c/: Makefile
citro2d/: Cargo.toml
citro2d/src/: lib.rs
gfx/: barista.t3s  bg.t3s  font.t3s  sign.t3s
gfx/font/: font.ase
gfx/text/enUS/: menu.toml
gfx/text/esES/: menu.toml
meta/: app.rsf
plgldr/include/: plgldr.h
romfs/: barista.t3x  bg.t3x
romfs/audio/strm/: Practice.bcstm  bartender_construction.bcstm
romfs/gfx/: barista.t3x  sign.t3x
src/: audio.rs  bcstm.rs  constants.rs  error.rs  launcher.rs  log.rs  main.rs  mod_picker.rs  saltwater_cfg.rs
src/format/: barista_cfg.rs  bcstm.rs  mod.rs  saltwater_cfg.rs
src/plgldr/: bindings.rs  mod.rs
src/scene/: menu.rs  mod.rs  top_screen.rs
src/scene/menu/: mod.rs  render.rs  run.rs
ui/: Cargo.toml
ui/src/: lib.rs
