[package]
name = "barista"
description = "A launcher for Rhythm Heaven Megamix mods"
authors = ["patataofcourse"]
version = "0.1.0"
edition = "2021"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
barista-ui = { path = "library/ui" }
libc = "0.2"
bytestream = "0.4"

[features]
default = ["no_citra"]
jp = []         # Enables SpiceRack with Japanese Megamix (Tickflow doesn't work)
audio = []      # Enables audio - broken/experimental
no_citra = []   # Disables plgldr in order to be able to test graphics on Citra