[package]
name = "barista"
description = "A launcher for Rhythm Heaven Megamix mods"
authors = ["patataofcourse"]
version = "0.1.0"
edition = "2021"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
citro2d-sys = { path = "library/citro2d" }
barista-ui = { path = "library/ui" }
libc = "0.2"
bytestream = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
backtrace = "*"

[features]
default = []
jp = []         # Enables SpiceRack with Japanese Megamix (Tickflow doesn't work)
audio = []      # Enables audio - broken/experimental
