[package]
name = "citro2d"
version = "0.1.0"
authors = ["patataofcourse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { path = "../../3ds-rust-env/ctru-rs/ctru-rs" }
ctru-sys = { path = "../../3ds-rust-env/ctru-rs/ctru-sys" }
libc = "0.2"
