[package]
name = "ui"
version = "0.1.0"
authors = ["patataofcourse <patataofcourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { path = "../../3ds-rust-env/ctru-rs/ctru-rs" }
ctru-sys = { path = "../../3ds-rust-env/ctru-rs/ctru-sys" }